--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ h2 {
 
 .links-list li {
     margin: 10px 20px;
-    list-style-type: none;
+    list-style-type: none; /*remover pontinhos de lista*/
 }
 
 .links-list li a {
@@ -64,6 +64,7 @@ h2 {
     text-decoration: none;
     color: rgb(54,77,204);
     font-weight: bold;
+    box-shadow: 0 0 20px white;
 }
 
 .links-list li a span {
@@ -72,4 +73,25 @@ h2 {
     margin-top: 10px;
 }
 
+.links-sociais li {
+    margin: 10px 20px;
+    list-style-type: none; /*remover pontinhos de lista*/
+}
+
+.links-sociais li a {
+    display: block;  
+    background: white;
+    padding: 15px 20px;
+    border-radius: 4px;
+    text-decoration: none;
+    color: rgb(54,77,204);
+    font-weight: bold;
+    
+}
+
+.links-sociais li a span {
+    color: grey;
+    display: block;
+    margin-top: 10px;
+}    
 
